--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
         <div class="workspace">
             <div class="components-toolbar" id="componentsToolbar">
                 <button class="component-btn" data-component="resistor" title="Resistencia">
-                    <img src="./images/Resistor.png" alt="Resistor Icono" class="component-icon">
+                    <img src="../images/Resistor.png" alt="Resistor Icono" class="component-icon">
                     <span class="component-label">Resistor</span>
                 </button>
                 <button class="component-btn" data-component="capacitor" title="Capacitor">
-                    <img src="./images/Capacitor.png" alt="Capacitor Icono" class="component-icon">
+                    <img src="../images/Capacitor.png" alt="Capacitor Icono" class="component-icon">
                     <span class="component-label">Capacitor</span>
                 </button>
                 <button class="component-btn" data-component="inductor" title="Inductor">
-                    <img src="./images/Inductor.png" alt="Inductor Icono" class="component-icon">
+                    <img src="../images/Inductor.png" alt="Inductor Icono" class="component-icon">
                     <span class="component-label">Inductor</span>
                 </button>
                 <button class="component-btn" data-component="led" title="LED">
-                    <img src="./images/Led.png" alt="Led Icono" class="component-icon">
+                    <img src="../images/Led.png" alt="Led Icono" class="component-icon">
                     <span class="component-label">LED</span>
                 </button>
                 <button class="component-btn" data-component="switch" title="Interruptor">
-                    <img src="./images/Switch.png" alt="Switch Icono" class="component-icon">
+                    <img src="../images/Switch.png" alt="Switch Icono" class="component-icon">
                     <span class="component-label">Switch</span>
                 </button>
                 <button class="component-btn" data-component="battery" title="Fuente de Voltaje DC">
@@ -61,7 +61,7 @@
                     <span class="component-label">Fuente AC</span>
                 </button>
                 <button class="component-btn" data-component="ground" title="Tierra">
-                    <img src="./images/Tierra.png" alt="Tierra Icono" class="component-icon">
+                    <img src="../images/Tierra.png" alt="Tierra Icono" class="component-icon">
                     <span class="component-label">Tierra</span>
                 </button>
             </div>
@@ -133,6 +133,12 @@
         <div class="notification-title" id="notificationTitle">Título</div>
         <div class="notification-message" id="notificationMessage">Mensaje</div>
     </div>
+
+    <script src="../script.js">
+
+    </script>
+</body>
+</html>
 
     <script src="js/script.js"></script>
 </body>
